# server/cmd/review-service/api.go
@@ -32,14 +32,37 @@ func newAPI(logger *zap.Logger, service bookly.ReviewService) *api {
 }
 
 func (a *api) mount(router chi.Router) {
-	router.Route("/api/v1/client", func(r chi.Router) {
-		r.With(auth.SessionMiddleware()).Route("/hotels", func(r chi.Router) {
-			r.Get("/{hotelID}/offers/{offerID}/reviews", a.handleGetOfferReviews)
-			r.Post("/{hotelID}/offers/{offerID}/reviews", a.handlePostReview)
-			r.Delete("/{hotelID}/offers/{offerID}/reviews/{reviewID}", a.handleDeleteReview)
-			r.Put("/{hotelID}/offers/{offerID}/reviews/{reviewID}", a.handleUpdateReview)
+	router.Route("/api/v1", func(r chi.Router) {
+		r.With(auth.SessionMiddleware()).Route("/client", func(r chi.Router) {
+			r.Get("/hotels/{hotelID}/reviews", a.handleGetHotelReviews)
+			r.Get("/hotels/{hotelID}/offers/{offerID}/reviews", a.handleGetOfferReviews)
+			r.Get("/reservations/{reservationID}/review", a.handleGetReview)
+			r.Delete("/reservations/{reservationID}/review", a.handleDeleteReview)
+			r.Put("/reservations/{reservationID}/review", a.handleUpdateReview)
 		})
 	})
+}
+
+func (a *api) handleGetHotelReviews(w http.ResponseWriter, r *http.Request) {
+	session := auth.SessionFromContext(r.Context())
+
+	hotelIDStr := chi.URLParam(r, "hotelID")
+	hotelID, errConvertHotel := strconv.ParseInt(hotelIDStr, 10, 64)
+	if errConvertHotel != nil {
+		a.logger.Info("Unable to update offer, due bad parameter", zap.Error(errConvertHotel))
+		httpapi.RespondWithCode(w, http.StatusNotFound)
+		return
+	}
+
+	reviews, err := a.reviewService.GetReviewsOfHotel(r.Context(), hotelID, session.UserID)
+	if err != nil {
+		httpapi.RespondWithErrorCode(w, "Unable to reserve: reviews is not available.", http.StatusNotFound)
+		return
+	}
+
+	httpapi.WriteJSONResponse(a.logger, w, reviews)
+	w.WriteHeader(http.StatusOK)
+	return
 }
 
 func (a *api) handleGetOfferReviews(w http.ResponseWriter, r *http.Request) {
@@ -62,8 +85,7 @@ func (a *api) handleGetOfferReviews(w http.ResponseWriter, r *http.Request) {
 
 	reviews, err := a.reviewService.GetReviewsOfOffer(r.Context(), offerID, session.UserID)
 	if err != nil {
-		httpapi.RespondWithError(w, "Unable to reserve: reviews is not available.")
-		w.WriteHeader(http.StatusNotFound)
+		httpapi.RespondWithErrorCode(w, "Unable to reserve: reviews is not available.", http.StatusNotFound)
 		return
 	}
 
@@ -72,51 +94,32 @@ func (a *api) handleGetOfferReviews(w http.ResponseWriter, r *http.Request) {
 	return
 }
 
-func (a *api) handlePostReview(w http.ResponseWriter, r *http.Request) {
+func (a *api) handleGetReview(w http.ResponseWriter, r *http.Request) {
 	session := auth.SessionFromContext(r.Context())
-	if !httpapi.IsHeaderTypeValid(w, r, "application/json", "Unable to add review") {
-		return
-	}
-	decoder := json.NewDecoder(r.Body)
-	var decodedRequest createReviewModel
-	err := decoder.Decode(&decodedRequest)
-	if err != nil {
-		httpapi.RespondWithError(w, "Unable to add review")
-		a.logger.Info("handlePostReview: could not decode", zap.Error(err))
-		return
-	}
-	offerIDStr := chi.URLParam(r, "offerID")
-	offerID, errConvert := strconv.ParseInt(offerIDStr, 10, 64)
+
+	reservationIDStr := chi.URLParam(r, "reservationID")
+	reservationID, errConvert := strconv.ParseInt(reservationIDStr, 10, 64)
 	if errConvert != nil {
-		a.logger.Info("Unable to update offer, due bad parameter", zap.Error(errConvert))
-		httpapi.RespondWithCode(w, http.StatusNotFound)
-		return
-	}
-	hotelIDStr := chi.URLParam(r, "hotelID")
-	_, errConvertHotel := strconv.ParseInt(hotelIDStr, 10, 64)
-	if errConvertHotel != nil {
-		a.logger.Info("Unable to update offer, due bad parameter", zap.Error(errConvertHotel))
+		a.logger.Info("Unable to get review, due bad parameter", zap.Error(errConvert))
 		httpapi.RespondWithCode(w, http.StatusNotFound)
 		return
 	}
 
-	review := bookly.Review{
-		Content: decodedRequest.Content,
-		Rating:  decodedRequest.Rating,
-	}
-
-	reviewID, err := a.reviewService.CreateReview(r.Context(), review, session.UserID, offerID)
+	review, err := a.reviewService.GetReviewsOfReservation(r.Context(), reservationID, session.UserID)
 	if err != nil {
+		if err == bookly.ErrReviewNotFound {
+			httpapi.RespondWithErrorCode(w, "Unable to get review: no review.", http.StatusNotFound)
+			return
+		}
+		if err == bookly.ErrReviewNotOwned {
+			httpapi.RespondWithErrorCode(w, "Unable to get review: no owned.", http.StatusNotFound)
+			return
+		}
 		httpapi.RespondWithError(w, "Unable to reserve")
-		a.logger.Info("handlePostReview: could error add review", zap.Error(err))
+		a.logger.Info("handlePostOffer: could error add reservation", zap.Error(err))
 		return
 	}
-
-	respond := createReviewRespondModel{
-		ReviewID: reviewID,
-	}
-
-	httpapi.WriteJSONResponse(a.logger, w, respond)
+	httpapi.WriteJSONResponse(a.logger, w, review)
 	w.WriteHeader(http.StatusOK)
 	return
 }
@@ -124,32 +127,25 @@ func (a *api) handlePostReview(w http.ResponseWriter, r *http.Request) {
 func (a *api) handleDeleteReview(w http.ResponseWriter, r *http.Request) {
 	session := auth.SessionFromContext(r.Context())
 
-	reviewIDStr := chi.URLParam(r, "reviewID")
-	reviewID, errConvertReview := strconv.ParseInt(reviewIDStr, 10, 64)
-	if errConvertReview != nil {
-		a.logger.Info("Unable to delete review, due bad parameter", zap.Error(errConvertReview))
-		httpapi.RespondWithCode(w, http.StatusNotFound)
-		return
-	}
-
-	offerIDStr := chi.URLParam(r, "offerID")
-	offerID, errConvert := strconv.ParseInt(offerIDStr, 10, 64)
+	reservationIDStr := chi.URLParam(r, "reservationID")
+	reservationID, errConvert := strconv.ParseInt(reservationIDStr, 10, 64)
 	if errConvert != nil {
-		a.logger.Info("Unable to delete review, due bad parameter", zap.Error(errConvert))
-		httpapi.RespondWithCode(w, http.StatusNotFound)
-		return
-	}
-	hotelIDStr := chi.URLParam(r, "hotelID")
-	_, errConvertHotel := strconv.ParseInt(hotelIDStr, 10, 64)
-	if errConvertHotel != nil {
-		a.logger.Info("Unable to delete review, due bad parameter", zap.Error(errConvertHotel))
+		a.logger.Info("Unable to get review, due bad parameter", zap.Error(errConvert))
 		httpapi.RespondWithCode(w, http.StatusNotFound)
 		return
 	}
 
-	err := a.reviewService.DeleteReview(r.Context(), reviewID, session.UserID, offerID)
+	err := a.reviewService.DeleteReview(r.Context(), session.UserID, reservationID)
 	if err != nil {
-		httpapi.RespondWithError(w, "Unable to reserve: reviews is not available.")
+		if err == bookly.ErrReviewNotFound {
+			httpapi.RespondWithErrorCode(w, "Unable to delete review: no review.", http.StatusNotFound)
+			return
+		}
+		if err == bookly.ErrReviewNotOwned {
+			httpapi.RespondWithErrorCode(w, "Unable to delete review: no owned.", http.StatusNotFound)
+			return
+		}
+		httpapi.RespondWithError(w, "Unable to delete: reviews is not available.")
 		w.WriteHeader(http.StatusNotFound)
 		return
 	}
@@ -164,7 +160,7 @@ func (a *api) handleUpdateReview(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	decoder := json.NewDecoder(r.Body)
-	var decodedRequest bookly.Review
+	var decodedRequest createReviewModel
 	err := decoder.Decode(&decodedRequest)
 	if err != nil {
 		httpapi.RespondWithError(w, "Unable to add review")
@@ -172,33 +168,30 @@ func (a *api) handleUpdateReview(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	reviewIDStr := chi.URLParam(r, "reviewID")
-	reviewID, errConvertReview := strconv.ParseInt(reviewIDStr, 10, 64)
-	if errConvertReview != nil {
-		a.logger.Info("Unable to put review, due bad parameter", zap.Error(errConvertReview))
-		httpapi.RespondWithCode(w, http.StatusNotFound)
-		return
-	}
-
-	offerIDStr := chi.URLParam(r, "offerID")
-	offerID, errConvert := strconv.ParseInt(offerIDStr, 10, 64)
+	reservationIDStr := chi.URLParam(r, "reservationID")
+	reservationID, errConvert := strconv.ParseInt(reservationIDStr, 10, 64)
 	if errConvert != nil {
-		a.logger.Info("Unable to update offer, due bad parameter", zap.Error(errConvert))
-		httpapi.RespondWithCode(w, http.StatusNotFound)
-		return
-	}
-	hotelIDStr := chi.URLParam(r, "hotelID")
-	_, errConvertHotel := strconv.ParseInt(hotelIDStr, 10, 64)
-	if errConvertHotel != nil {
-		a.logger.Info("Unable to update offer, due bad parameter", zap.Error(errConvertHotel))
+		a.logger.Info("Unable to get review, due bad parameter", zap.Error(errConvert))
 		httpapi.RespondWithCode(w, http.StatusNotFound)
 		return
 	}
 
-	decodedRequest.ID = reviewID
-	_, err = a.reviewService.UpdateReview(r.Context(), decodedRequest, session.UserID, offerID)
+	review := bookly.Review{
+		Content: decodedRequest.Content,
+		Rating:  decodedRequest.Rating,
+	}
+
+	_, err = a.reviewService.CreateOrUpdateReview(r.Context(), review, session.UserID, reservationID)
 
 	if err != nil {
+		if err == bookly.ErrReviewNotFound {
+			httpapi.RespondWithErrorCode(w, "Unable to put review: no review.", http.StatusNotFound)
+			return
+		}
+		if err == bookly.ErrReviewNotOwned {
+			httpapi.RespondWithErrorCode(w, "Unable to put review: no owned.", http.StatusNotFound)
+			return
+		}
 		httpapi.RespondWithError(w, "Unable to reserve")
 		a.logger.Info("handlePostReview: could error add review", zap.Error(err))
 		return
